[tool.poetry]
name = "recipe-management"
version = "0.1.0"
description = "Recipe Management API"
authors = ["David Nwolu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
pydantic = "^2.6.4"
httpx = "^0.27.0"
coverage = "^7.4.4"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
